# internal/delivery/http/route/route.go
@@ -15,6 +15,8 @@ type RouteConfig struct {
 	DashboardController  *controller.DashboardController
 	TokenUtil            *util.TokenUtil
 	AttendanceController *controller.AttendanceController
+	FeeController        *controller.FeeController
+	TopupController      *controller.TopupController
 }
 
 func (rc *RouteConfig) Setup() {
@@ -29,6 +31,8 @@ func (rc *RouteConfig) setupPublicRoute() {
 	rc.Router.HandleFunc("/api/auth/register", rc.UserController.Register).Methods("POST")
 	rc.Router.HandleFunc("/api/auth/login", rc.UserController.Login).Methods("POST")
 	rc.Router.HandleFunc("/api/auth/refresh", rc.UserController.RefreshToken).Methods("POST")
+
+	rc.Router.HandleFunc("/api/midtrans/notification", rc.TopupController.CallbakcHandler).Methods("POST")
 }
 
 // with middleware
@@ -48,4 +52,9 @@ func (rc *RouteConfig) setupPrivateRoute() {
 	api.HandleFunc("/attendances", rc.AttendanceController.GetAttendances).Methods("GET")
 	api.HandleFunc("/attendances/paginate", rc.AttendanceController.GetAttendancesPaginated).Methods("GET")
 	api.HandleFunc("/attendances/summary", rc.AttendanceController.GetAttendanceSummary).Methods("GET")
+
+	api.HandleFunc("/fees", rc.FeeController.GetFees).Methods("GET")
+	api.HandleFunc("/fees/{feeId}", rc.FeeController.GetFeeDetail).Methods("GET")
+
+	api.HandleFunc("/topup", rc.TopupController.CreatePayment).Methods("POST")
 }
